resolved post rule overflow

--- a/src/features/Content/PostList/PostPreview/PostPreview.scss
+++ b/src/features/Content/PostList/PostPreview/PostPreview.scss
@@ -25,6 +25,10 @@
       line-height: 1.3rem;
       font-weight: 500;
     }
+    a{
+      overflow-wrap: break-word;
+      line-height: 1.3rem;
+    }
     .image-container{
       margin-top: 10px;
       display: flex;
